# MV_Final_Project

./: .clang-format  Dockerfile  README.md  docker-compose.yaml
gesturebot_ws/src/camerafeed_receiver/: package.xml  setup.cfg  setup.py
gesturebot_ws/src/camerafeed_receiver/camerafeed_receiver/: camerafeed_receiver.py  object_detection_webcam_test.py
gesturebot_ws/src/gesturebot_gestures/gesturebot_gestures/: gesture_detector.py
gesturebot_ws/src/gesturebot_launch/launch/: gesturebot.launch.py
gesturebot_ws/src/gesturebot_manipulation/: CMakeLists.txt
gesturebot_ws/src/gesturebot_manipulation/src/: manipulation_handler.cpp
src/gesturebot_gestures/gesturebot_gestures/: gesture_detector.py
src/gesturebot_manipulation/: package.xml
src/gesturebot_manipulation/src/: test_node.cpp
